EDM-1951: Remove callback manager
